tests/ui/deriving/deriving-smart-pointer-neg.stderr
error: `SmartPointer` can only be derived on `struct`s with `#[repr(transparent)]`
  --> $DIR/deriving-smart-pointer-neg.rs:6:10
   |
LL | #[derive(SmartPointer)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SmartPointer` (in Nightly builds, run with -Z macro-backtrace for more info)

error: At least one generic type should be designated as `#[pointee]` in order to derive `SmartPointer` traits
  --> $DIR/deriving-smart-pointer-neg.rs:12:10
   |
LL | #[derive(SmartPointer)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SmartPointer` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `SmartPointer` can only be derived on `struct`s with at least one field
  --> $DIR/deriving-smart-pointer-neg.rs:19:10
   |
LL | #[derive(SmartPointer)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SmartPointer` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `SmartPointer` can only be derived on `struct`s with at least one field
  --> $DIR/deriving-smart-pointer-neg.rs:26:10
   |
LL | #[derive(SmartPointer)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SmartPointer` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `SmartPointer` can only be derived on `struct`s with `#[repr(transparent)]`
  --> $DIR/deriving-smart-pointer-neg.rs:33:10
   |
LL | #[derive(SmartPointer)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `SmartPointer` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `derive(SmartPointer)` requires T to be marked `?Sized`
  --> $DIR/deriving-smart-pointer-neg.rs:41:36
   |
LL | struct NoMaybeSized<'a, #[pointee] T> {
   |                                    ^

error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/deriving-smart-pointer-neg.rs:22:16
   |
LL | struct NoField<'a, #[pointee] T: ?Sized> {}
   |                ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/deriving-smart-pointer-neg.rs:22:31
   |
LL | struct NoField<'a, #[pointee] T: ?Sized> {}
   |                               ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/deriving-smart-pointer-neg.rs:29:20
   |
LL | struct NoFieldUnit<'a, #[pointee] T: ?Sized>();
   |                    ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/deriving-smart-pointer-neg.rs:29:35
   |
LL | struct NoFieldUnit<'a, #[pointee] T: ?Sized>();
   |                                   ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0392`.
